Some fixes for scaling on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -554,7 +554,10 @@ svg {
   left: 2px;
 }
 
-@media (max-aspect-ratio: 1/1) {
+@media (max-aspect-ratio: 3/2) {
+  .mobileSmallerFont{
+    font-size: xx-small;
+  }
   .fullGrafana {
     width: calc(100vw - 2em);
   }
@@ -601,7 +604,7 @@ svg {
   .elipsOnMobileExtra {
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 10vw;
+    width: 12vw;
     text-align: start;
   }
   .mobileNoPadding {
